--- a/Documents/quotesbyvanshika/sanity-backend/tsconfig.json
+++ b/Documents/quotesbyvanshika/sanity-backend/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["**/*.ts", "**/*.tsx"],
+  "include": ["**/*.ts", "**/*.tsx", "schemas/qoutes.js"],
   "exclude": ["node_modules"]
 }
